# NetSocket

./: CMakeLists.txt  README.md
example/: democlient.cpp  demoserver.cpp
include/: netsocket.h
include/netsocket/: basicsocket.h  client.h  clientconnection.h  securesocket.h  server.h  socket.h
src/: basicsocket.cpp  client.cpp  clientconnection.cpp  netsocket.cpp  securesocket.cpp  server.cpp  socket.cpp
